fix: fixed sidebar icon alignment issue on safari

--- a/assets/css/f5-hugo.css
+++ b/assets/css/f5-hugo.css
@@ -1116,6 +1116,9 @@ main a:hover {
 .sidebar-title {
   font-size: 22px;
   font-weight: 600 !important;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 #sidebar > h3 > a:hover {
